fixed not showing the decade breakdown:

--- a/src/app/decade-card/decade-card.component.scss
+++ b/src/app/decade-card/decade-card.component.scss
@@ -34,7 +34,7 @@
 
     h2 {
         margin-top: 0.5em;
-        margin-bottom: 0.5em;
+        margin-bottom: 0.7em;
     }
 
     a, a:visited, a:active {
